--- a/frontend/public/style.css
+++ b/frontend/public/style.css
@@ -73,7 +73,14 @@ img.itemImage:hover {
 .side-nav {
     margin-left: 20px;
     padding: 12px 15px;
-    /* width: 20%; */
+    width: 18%;
+}
+
+.form-group{
+    margin-top: 15px;
+}
+.year-input select{
+ /* width: 20; */
 }
 
 
