--- a/frontend/public/style.css
+++ b/frontend/public/style.css
@@ -112,6 +112,11 @@ input {
     margin-top: 5px;
 }
 
+.addProductBtn {
+    position: absolute;
+    right: 20px;
+}
+
 .footer {
     background-color: #26272b;
     padding: 45px 0 20px;
