--- a/frontend/public/style.css
+++ b/frontend/public/style.css
@@ -28,7 +28,7 @@ body {
     border-radius: 4px;
 }
 
-.registration-form h1, .login-form h1 {
+.registration-form h2, p, .login-form h2 {
     text-align: center;
 }
 
